# artefact-cataloguer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
docs/: DESIGN_SYSTEM.md
scripts/: build-windows.bat  build-windows.ps1  update-check.mjs
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  embeddings.rs  images.rs  lib.rs  main.rs  secrets.rs  settings.rs  vocab_files.rs
src/app/: actions.test.ts  actions.ts  defaults.test.ts  defaults.ts  drafts.ts  schema.ts  state.test.ts  state.ts  styles.ts  types.ts
src/components/: ConfirmDialog.test.tsx  ImageLightbox.tsx  LogsViewer.test.tsx  LogsViewer.tsx  MainScreen.tsx  ResultRow.tsx  ResultsPanel.tsx  TopBar.tsx  UploadPanel.tsx  useConfirmDelete.tsx
src/components/common/: ConfirmDialog.test.tsx  ConfirmDialog.tsx
src/components/main/: LogsViewer.test.tsx  LogsViewer.tsx  MainScreen.tsx  ResultRow.tsx  ResultsPanel.test.tsx  ResultsPanel.tsx  TopBar.tsx  UploadPanel.tsx
src/components/settings/: AboutTab.tsx  ArtefactFileTab.tsx  CardActions.tsx  CataloguingFieldsTab.tsx  EmbeddingProvidersSection.tsx  ExpandCollapseAll.tsx  (+11 more)
src/hooks/: useConfirmDelete.tsx  useDropZone.ts  useImageZoom.ts
src/lib/: ai.test.ts  ai.ts  images.ts  logs.test.ts  logs.ts  spreadsheet.test.ts  spreadsheet.ts  store.ts  utils.ts  vocab.ts
src/styles/: globals.css
(+1 files in other folders)
